2008-07-01 13:32 -0700  Brendan Cully  <brendan@kublai.com>  (17525e17fa7b)

	* copy.c: Bail out of copy if decryption is requested but the desired
	engine is missing. This closes #2684, but handling of mixed crypto
	in a single message needs more investigation.

2008-07-01 01:10 -0700  rtc  <rtc@gmx.de>  (49fe0292b503)

	* copy.c: When deleting attachments, always print newline
	separating header from body. Closes #3085.

2008-06-29 01:09 -0700  Brendan Cully  <brendan@kublai.com>  (677e7712d735)

	* crypt-gpgme.c: Improve gpgme SMIME uid display: align each line by
	the length of the first.

	* crypt-gpgme.c: Show more information about problematic SMIME
	signatures under gpgme. Also warn if the key is not known to be
	good. For some reason expired keys in my environment are not
	flagged as expired in sig->status or sig->summary.

2008-06-28 20:33 -0700  Brendan Cully  <brendan@kublai.com>  (1492c24f2a4e)

	* mutt_ssl_gnutls.c: Extract CN from client certificate in gnutls.
	Nothing currently uses it, but I suspect we should be using it as
	the external auth name in mutt_sasl_client_new.

	* UPDATING, globals.h, init.h, mutt_sasl.c, mutt_ssl_gnutls.c:
	Basic support for $ssl_client_cert when compiled with
	gnutls. The key must not be encrypted. Closes #2911.

2008-06-27 12:04 -0700  Petr Písař  <petr.pisar@atlas.cz>  (40c6e851bf76)

	* po/cs.po: Updated Czech translation.

2008-06-26 12:52 -0700  Brendan Cully  <brendan@kublai.com>  (c5256c65eedb)

	* handler.c: Mark new error message for translation.

	* curs_lib.c: Force a resize event after calling an external editor.
	Closes #2207

	* lib.c, lib.h, mh.c: fflush before fsync and close. Closes #2962
	again.

	* mh.c: fsync maildir/mh messages on commit. Closes #2962.

2008-06-25 23:40 -0700  Brendan Cully  <brendan@kublai.com>  (32374c911c6c)

	* smime.c: Check S/MIME signing ID exists before attempting to use
	it. Closes #3069. Also make (s)ign automatically ask for a key if
	no default is defined.
